<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AppItineraryMvcActivity!</string>
    <string name="app_name">AppItineraryMvc</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="departureDate">Departure Date:</string>
    <string name="returnDate">Return Date:</string>
    <string name="noOfPassengers">No. of passengers:</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>

</resources>